--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,8 +1,9 @@
 body {
-    font-family: 'Roboto Slab', 'sans-serif';
+    font-family: 'Arial', 'sans-serif';
     font-size: 16px;
-    background-color: #fff;
-    color: #2A2B2E;
+    background-color: #CAD5CA;
+    /* background-color: #ffffff; */
+    color: #362023;
     margin: 0;
     height: 100vh;
     display: flex;
@@ -11,9 +12,8 @@ body {
 }
 
 header {
-    background-color: #fff;
     padding: 25px 100px;
-    border-bottom: 2px solid #97939A;
+    text-align: center;
 }
 
 main {
@@ -21,91 +21,76 @@ main {
     padding-right: 25px;
 }
 
-h1 {
-    color: #2A2B2E;
-    font-family: 'Roboto Slab', 'serif';
-    font-size: 56px;
-    margin: 0;
-    font-weight: normal;
-}
-
-h2 {
-    color: #2A2B2E;
-    font-family: 'Roboto Slab', 'serif';
-    font-weight: normal;
+.graph {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    margin-top: 50px;
+    margin-left: 20px;
+    /* justify-content: center;
+    align-items: center; */
 }
 
 svg {
     background-color: #ffffff;
 }
 
-button {
-    padding: 10px 30px;
-    color: #000;
-    background-color: #fff;
-    border: 1px solid #333;
-    border-radius: 4px;
-    cursor: pointer;
-    outline: 0;
-    font-family: 'Helvetica', 'sans-serif';
-    font-size: 16px;
+#bubble-chart1 {
+    margin: 0px;
 }
 
-button:hover, button:active {
-	background:linear-gradient(to bottom, #f6f6f6 5%, #ffffff 100%);
-	background-color:#f6f6f6;
+#bubble-chart2 {
+    margin-left: 20px;
 }
 
-.title, .axis-text {
+#bubble-chart3 {
+    margin-left: 20px;
+}
+
+.d3-tip {
+    line-height: 1;
+    font-weight: bold;
+    padding: 12px;
+    background: rgba(54, 32, 35, 0.8);
+    color: #fff;
+    border-radius: 2px;
+    pointer-events: none;
+  }
+
+h1 {
+    font-family: 'Times', 'serif';
+    font-size: 56px;
+    margin: 0;
+    font-weight: normal;
+}
+
+h2 {
+    font-weight: normal;
+}
+
+
+.axis-text {
     transform-origin: center;
     transform-box: fill-box;
     text-anchor: middle;
 }
 
-.viz-container{
-    padding: 0 10px;
+.button {
+    cursor: pointer;
 }
 
-.graph {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.button-text {
+    pointer-events: none;
 }
 
-.tick line{
-    visibility: hidden;
-  }
-
-  .info {
-      pointer-events: none;
-      font-family: 'Roboto';
-  }
-
-  .axis text {
-      font-family: 'Roboto';
-      cursor: default;
-      transform-box: fill-box;
-      transform-origin: center;
-  }
-
-  .axis path {
-      opacity: 0;
-  }
-
-.graph.radarchart {
-    flex-direction: column-reverse;
+.tooltip-value {
+    font-weight: normal;
 }
 
-.first-rank {
-    color: goldenrod;
+.axis path, .axis line {
+    stroke : #362023;
 }
 
-.second-rank {
-    color: silver;
-}
-
-.third-rank {
-    color: brown;
+.axis text {
+    fill : #362023;
 }
